# feedo-zing-bot

./: .env.example  CHANGELOG.md  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
constants/: links.json
locales/: de.json  en.json  it.json  ru.json
migrations/: add_feeds_and_user_feeds_tables.py  add_language_column.py  add_user_timezone_column.py
scripts/: database_manager.py  timezone_service.py  utils.py
